--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">SOULSHINE</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="app_name">Rolls Royce</string>
     <string name="hello_blank_fragment">buy</string>
-    <string name="open_drawer">Открыть меню</string>
-    <string name="close_drawer">Закрыть меню</string>
+    <string name="open_drawer">Open</string>
+    <string name="close_drawer">Close</string>
+    <string name="image_button_desc">Clic</string>
 </resources>
